--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "engines": {
     "node": "14.x"
   },
-  "scripts": {
-    "build": "tsc -p web/tsconfig.json"
-  },
+  "scripts": {},
   "dependencies": {
     "chrome-aws-lambda": "7.0.0",
     "marked": "4.0.10",
     "puppeteer-core": "13.1.2",
-    "twemoji": "13.0.1"
+    "twemoji": "13.0.1",
+    "vercel": "^27.3.4"
   },
   "devDependencies": {
     "@types/marked": "4.0.1",
