--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/marked": "4.0.1",
+    "@types/node": "^18.6.3",
     "@types/puppeteer": "5.4.4",
     "@types/puppeteer-core": "5.4.0",
     "typescript": "4.1.5"
